Criacao da migration de clientes

--- a/src/PB.CadastroCliente.API/appsettings.Development.json
+++ b/src/PB.CadastroCliente.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DbCliente": "Server=localhost,1200;Database=CadastroClienteDb;Password=Teste@123;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
