--- a/src/PB.MessageBus/PB.MessageBus.csproj
+++ b/src/PB.MessageBus/PB.MessageBus.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="EasyNetQ" Version="7.8.0" />
     <PackageReference Include="EasyNetQ.Management.Client" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Polly" Version="8.4.1" />
   </ItemGroup>
 
   <ItemGroup>
